FIX: qnotes column width, line-wrapping
Set Column width to actual column width
Add scrollbar to circumvent browser removing extra character  on lines

--- a/site/templates/styles/main.css
+++ b/site/templates/styles/main.css
@@ -294,6 +294,8 @@ input.form-control[type=number] {
 
 textarea.qnotes {
 	font-family: monospace;
+	word-break: keep-all;
+	overflow-y: scroll;
 }
 
 .input-group > .input-group-append.w25 {
